--- a/src/css/main.css
+++ b/src/css/main.css
@@ -132,8 +132,11 @@
     	margin-top: 7rem !important;
 	}
 	.py-20{
-		padding-top: 3rem;
-		padding-bottom: 3rem;
+		padding-top: 3rem !important;
+		padding-bottom: 3rem !important;
+	}
+	.header-gradient {
+		padding-top: 0px !important;
 	}
 }
 
